--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="./src/index.css" type="text/css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="bg-slate-300">
     <div id="root">
       <script type="module" src="./App.js"></script>
     </div>
