change in ui design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="./src/index.css" type="text/css" rel="stylesheet" />
   </head>
-  <body class="bg-slate-300">
+  <body class="bg-zinc-200">
     <div id="root">
       <script type="module" src="./App.js"></script>
     </div>
